docs/3.1/events/v1alpha1/fileEventSource.md
---
permalink: /3.1/events/v1alpha1/fileEventSource/
---

# events.v1alpha1.fileEventSource

"FileEventSource describes an event-source for file related events."

## Index

* [`fn withEventType(eventType)`](#fn-witheventtype)
* [`fn withMetadata(metadata)`](#fn-withmetadata)
* [`fn withMetadataMixin(metadata)`](#fn-withmetadatamixin)
* [`fn withPolling(polling)`](#fn-withpolling)
* [`obj watchPathConfig`](#obj-watchpathconfig)
  * [`fn withDirectory(directory)`](#fn-watchpathconfigwithdirectory)
  * [`fn withPath(path)`](#fn-watchpathconfigwithpath)
  * [`fn withPathRegexp(pathRegexp)`](#fn-watchpathconfigwithpathregexp)

## Fields

### fn withEventType

```ts
withEventType(eventType)
```



### fn withMetadata

```ts
withMetadata(metadata)
```



### fn withMetadataMixin

```ts
withMetadataMixin(metadata)
```



**Note:** This function appends passed data to existing values

### fn withPolling

```ts
withPolling(polling)
```



## obj watchPathConfig



### fn watchPathConfig.withDirectory

```ts
withDirectory(directory)
```



### fn watchPathConfig.withPath

```ts
withPath(path)
```



### fn watchPathConfig.withPathRegexp

```ts
withPathRegexp(pathRegexp)
```

